k8s/generated/local/hello-sailr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-sailr
  labels:
    app: hello-sailr
    type: web-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: local.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hello-sailr
            port:
              number: 80
